hass/hass/hass-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  namespace: hass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      containers:
      - name: hass
        image: ghcr.io/home-assistant/home-assistant:2024.5.2
        ports:
        - containerPort: 8123 #web gui
          name: http
          protocol: TCP
        volumeMounts:
        - name: hass-data
          mountPath: /config
        resources:
          requests:
            memory: 420Mi
            cpu: "15m"
          limits:
            memory: 700Mi
      volumes:
      - name: hass-data
        persistentVolumeClaim:
          claimName: hass-pvc
